--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,41 @@
 		<title>Node.Js Chat App</title>
 		<link rel="stylesheet" href="style/css/bootstrap.min.css">
 	</head>
-	<body>
-		<div class="container">
-			<h1>Welcome</h1>
-		</div>
+	<body data-gr-c-s-loaded="true" cz-shortcut-listen="true">
+
+	    <!-- Fixed navbar -->
+	    <nav class="navbar navbar-default navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="/">Owllog</a>
+	        </div>
+	        <div id="navbar" class="navbar-collapse collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a href="/">Home</a></li>
+	            <li><a href="#about">About</a></li>
+	            <li><a href="#contact">Contact</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>
+
+	    <br><br><br><br>
+
+	    <div class="container">
+
+	      <!-- Main component for a primary marketing message or call to action -->
+	      <div class="jumbotron">
+	        <h1>Owllog</h1>
+	        <p>I build this project to exam my skills in node.js...</p>
+	      </div>
+
+	    </div> <!-- /container -->
+	  
 	</body>
 </html>
