--- a/public/index.html
+++ b/public/index.html
@@ -42,15 +42,6 @@
 	    </div> <!-- /container -->
 	  
 	  <script src="/socket.io/socket.io.js"></script>
-	  <script>
-	  	var socket = io();
-	  	socket.on('connect', () => {
-	  		console.log('Connected to Server...');
-	  	});
-
-	  	socket.on('disconnect', () => {
-	  		console.log('Disconnected from Server...');
-	  	});
-	  </script>
+	  <script src="/src/index.js"></script>
 	</body>
 </html>
